 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/07/07:
   * Right clicking on a submenu didn't revert focus to its parent (Mark)
     FbTk/Menu.cc/hh
   * Pressing escape in a torn menu didn't work (Mark)
     FbTk/Menu.cc
   * Save workspace names when changing through menu, bug #1748967 (Mark)
     Workspace.cc Screen.cc/hh
*07/07/06:
   * When saving window information, use the class name instead of instance name
     by default (Mark)
     Remember.cc
   * Prevent apps (e.g. MPlayer) from moving/resizing just after creation if the
     position/size is saved in the apps file (Mark)
     Window.cc/hh
*07/07/03:
   * Avoid some problems with tabbed windows and resize increments (Mark)
     Window.cc WinClient.cc/hh
   * Added utility fluxbox-remote, which allows script access to most fluxbox
     commands; support must be turned on in the init file with
     session.screen<N>.allowRemoteActions; the syntax is, e.g.,
     fluxbox-remote "CustomMenu ~/.fluxbox/custommenu" (Mark)
     Screen.cc util/fluxbox-remote.cc util/Makefile.am
   * Update systemtray and KDE dockapps in slit when background changes (Mark)
     Screen.cc/hh Systemtray.cc Slit.cc FbTk/FbPixmap.cc/hh
   * Fixed resource usage due to Skype 1.4, bug #1745678 (Mark)
     FbTk/FbPixmap.cc
*07/07/02:
   * Remember original size/position in apps file for shaded or maximized
     windows (Mark)
     Remember.cc Window.cc/hh FbWinFrame.cc/hh
   * Enabled Xinerama and Imlib2 support by default (Mark)
     configure.in
   * Fixed handle rendering when switching from a style without them (Mark)
     FbWinFrame.cc
   * Changed :Tab <int> key command so that the last tab is focused if <int> is
     larger than the number of tabs (or first if <int> is negative and |<int>|
     is too large) (Mark)
     CurrentWindowCmd.cc
   * Fixed some rendering problems when toolbar item borderwidth is too large
     and toolbar bevelwidth is set (Mark)
     Toolbar.cc